--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-allure-testops",
   "version": "0.1.0",
-  "description": "",
+  "description": "N8N nodes for Allure TestOps",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "n8n-node",
+    "allure",
+    "testops",
+    "allure-testops",
+    "integration",
+    "test-automation",
+    "qa-tools",
+    "testing",
+    "workflow",
+    "automation"
   ],
-  "license": "MIT",
-  "homepage": "",
+  "license": " Apache-2.0",
+  "homepage": "https://github.com/GAKiknadze/n8n-nodes-allure-testops#readme",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "G.A.Kiknadze",
+    "url": "https://github.com/GAKiknadze"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/GAKiknadze/n8n-nodes-allure-testops.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GAKiknadze/n8n-nodes-allure-testops/issues"
   },
   "engines": {
     "node": ">=20.15"
