--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GAKiknadze/n8n-nodes-allure-testops.git"
+    "url": "git+https://github.com/GAKiknadze/n8n-nodes-allure-testops.git"
   },
   "bugs": {
     "url": "https://github.com/GAKiknadze/n8n-nodes-allure-testops/issues"
