--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           node-version: 20
       - run: npm i
-      - run: npm ci
-      - run: npm test
+      - run: npm run lint
 
   publish-gpr:
     needs: build
@@ -32,7 +31,6 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
       - run: npm i
-      - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
